[package]
name = "rust-async-book-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
async-task = "4.7.1"
chrono = "0.4.38"
flume = { version = "0.11.0", features = ["async", "select", "spin"] }
futures = "0.3.30"
futures-lite = "2.3.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
